# Elaeocarpus

./: .gitignore  CMakeLists.txt  README.md  build.sh  conan.history  conanfile.txt  design.md
MulticastReceiver_mcx/: CMakeLists.txt  setup.sh
MulticastReceiver_mcx/.ccls/@@home@akhil@files@projects@MulticastReceiver_mcx/: @usr@include@alloca.h.blob  @usr@include@arpa@inet.h.blob  @usr@include@asm-generic@bitsperlong.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@asm-generic@int-ll64.h.blob  @usr@include@asm-generic@posix_types.h.blob  @usr@include@asm-generic@socket.h.blob  @usr@include@asm-generic@sockios.h.blob  @usr@include@asm-generic@types.h.blob  @usr@include@assert.h.blob  @usr@include@c++@12@algorithm.blob  @usr@include@c++@12@array.blob  @usr@include@c++@12@atomic.blob  @usr@include@c++@12@backward@auto_ptr.h.blob  @usr@include@c++@12@backward@binders.h.blob  @usr@include@c++@12@bit.blob  @usr@include@c++@12@bits@algorithmfwd.h.blob  @usr@include@c++@12@bits@align.h.blob  @usr@include@c++@12@bits@alloc_traits.h.blob  @usr@include@c++@12@bits@allocated_ptr.h.blob  @usr@include@c++@12@bits@allocator.h.blob  @usr@include@c++@12@bits@atomic_base.h.blob  @usr@include@c++@12@bits@atomic_lockfree_defines.h.blob  @usr@include@c++@12@bits@atomic_timed_wait.h.blob  @usr@include@c++@12@bits@atomic_wait.h.blob  @usr@include@c++@12@bits@basic_ios.h.blob  @usr@include@c++@12@bits@basic_ios.tcc.blob  @usr@include@c++@12@bits@basic_string.h.blob  @usr@include@c++@12@bits@basic_string.tcc.blob  @usr@include@c++@12@bits@char_traits.h.blob  @usr@include@c++@12@bits@charconv.h.blob  @usr@include@c++@12@bits@chrono.h.blob  @usr@include@c++@12@bits@codecvt.h.blob  @usr@include@c++@12@bits@concept_check.h.blob  @usr@include@c++@12@bits@cpp_type_traits.h.blob  @usr@include@c++@12@bits@cxxabi_forced.h.blob  @usr@include@c++@12@bits@cxxabi_init_exception.h.blob  @usr@include@c++@12@bits@deque.tcc.blob  @usr@include@c++@12@bits@enable_special_members.h.blob  (+516 more)
MulticastReceiver_mcx/.ccls/@home@akhil@files@projects@MulticastReceiver_mcx/: .ccls@@home@akhil@files@projects@MulticastReceiver_mcx@build@CMakeFiles@3.22.1@CompilerIdCXX@CMakeCXXCompilerId.cpp.blob  .ccls@@home@akhil@files@projects@MulticastReceiver_mcx@build@_deps@spdlog-src@bench@async_bench.cpp.blob  .ccls@@home@akhil@files@projects@MulticastReceiver_mcx@build@_deps@spdlog-src@bench@bench.cpp.blob  .ccls@@home@akhil@files@projects@MulticastReceiver_mcx@build@_deps@spdlog-src@bench@formatter-bench.cpp.blob  .ccls@@home@akhil@files@projects@MulticastReceiver_mcx@build@_deps@spdlog-src@bench@latency.cpp.blob  .ccls@@home@akhil@files@projects@MulticastReceiver_mcx@build@_deps@spdlog-src@example@example.cpp.blob  .ccls@@home@akhil@files@projects@MulticastReceiver_mcx@build@_deps@spdlog-src@src@async.cpp.blob  .ccls@@home@akhil@files@projects@MulticastReceiver_mcx@build@_deps@spdlog-src@src@bundled_fmtlib_format.cpp.blob  .ccls@@home@akhil@files@projects@MulticastReceiver_mcx@build@_deps@spdlog-src@src@cfg.cpp.blob  .ccls@@home@akhil@files@projects@MulticastReceiver_mcx@build@_deps@spdlog-src@src@color_sinks.cpp.blob  .ccls@@home@akhil@files@projects@MulticastReceiver_mcx@build@_deps@spdlog-src@src@file_sinks.cpp.blob  .ccls@@home@akhil@files@projects@MulticastReceiver_mcx@build@_deps@spdlog-src@src@spdlog.cpp.blob  .ccls@@home@akhil@files@projects@MulticastReceiver_mcx@build@_deps@spdlog-src@src@stdout_sinks.cpp.blob  .ccls@@home@akhil@files@projects@MulticastReceiver_mcx@build@_deps@spdlog-src@tests@main.cpp.blob  .ccls@@home@akhil@files@projects@MulticastReceiver_mcx@build@_deps@spdlog-src@tests@test_async.cpp.blob  .ccls@@home@akhil@files@projects@MulticastReceiver_mcx@build@_deps@spdlog-src@tests@test_backtrace.cpp.blob  .ccls@@home@akhil@files@projects@MulticastReceiver_mcx@build@_deps@spdlog-src@tests@test_cfg.cpp.blob  .ccls@@home@akhil@files@projects@MulticastReceiver_mcx@build@_deps@spdlog-src@tests@test_create_dir.cpp.blob  .ccls@@home@akhil@files@projects@MulticastReceiver_mcx@build@_deps@spdlog-src@tests@test_daily_logger.cpp.blob  .ccls@@home@akhil@files@projects@MulticastReceiver_mcx@build@_deps@spdlog-src@tests@test_dup_filter.cpp.blob  .ccls@@home@akhil@files@projects@MulticastReceiver_mcx@build@_deps@spdlog-src@tests@test_errors.cpp.blob  .ccls@@home@akhil@files@projects@MulticastReceiver_mcx@build@_deps@spdlog-src@tests@test_eventlog.cpp.blob  .ccls@@home@akhil@files@projects@MulticastReceiver_mcx@build@_deps@spdlog-src@tests@test_file_helper.cpp.blob  .ccls@@home@akhil@files@projects@MulticastReceiver_mcx@build@_deps@spdlog-src@tests@test_file_logging.cpp.blob  .ccls@@home@akhil@files@projects@MulticastReceiver_mcx@build@_deps@spdlog-src@tests@test_fmt_helper.cpp.blob  .ccls@@home@akhil@files@projects@MulticastReceiver_mcx@build@_deps@spdlog-src@tests@test_macros.cpp.blob  .ccls@@home@akhil@files@projects@MulticastReceiver_mcx@build@_deps@spdlog-src@tests@test_misc.cpp.blob  .ccls@@home@akhil@files@projects@MulticastReceiver_mcx@build@_deps@spdlog-src@tests@test_mpmc_q.cpp.blob  .ccls@@home@akhil@files@projects@MulticastReceiver_mcx@build@_deps@spdlog-src@tests@test_pattern_formatter.cpp.blob  .ccls@@home@akhil@files@projects@MulticastReceiver_mcx@build@_deps@spdlog-src@tests@test_registry.cpp.blob  .ccls@@home@akhil@files@projects@MulticastReceiver_mcx@build@_deps@spdlog-src@tests@test_stdout_api.cpp.blob  .ccls@@home@akhil@files@projects@MulticastReceiver_mcx@build@_deps@spdlog-src@tests@test_stopwatch.cpp.blob  .ccls@@home@akhil@files@projects@MulticastReceiver_mcx@build@_deps@spdlog-src@tests@test_systemd.cpp.blob  (+382 more)
MulticastReceiver_mcx/cfg/: mcx_mcast_cfg.yaml
applications/: CMakeLists.txt  main.cpp  shm_demo.cpp
applications/asiotbtrecov/: CMakeLists.txt
applications/nse_solace_recovery_standalone/: CMakeLists.txt
applications/nse_tbt_recovery_standalone/: CMakeLists.txt
applications/simplerecov/: CMakeLists.txt  main.cpp  main.cpp_bkp  tbt_packet_structure.h
programs/: CMakeLists.txt  main.cpp
programs/nse_tbt_recovery_standalone/: CMakeLists.txt
(+104 files in other folders)
